[project]
name = "opensimplex_pytorch"
version = "0.0.1"
authors = [
  { name="Alexander Morosow" },
]
description = "OpenSimplex Noise - implemented in PyTorch"
readme = "README.md"
license= {text="MIT"}
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/worosom/opensimplex_pytorch"
"Bug Tracker" = "https://github.com/worosom/opensimplex_pytorch/issues"

[build-system]
requires = [
    "setuptools>=61.0",
    "torch",
    "torchvision",
    "torchaudio"
]
build-backend = "setuptools.build_meta"
